--- a/bingpic/m/css/style.css
+++ b/bingpic/m/css/style.css
@@ -336,7 +336,7 @@ body {
 .el:nth-child(1) .el__bg:before {
   -webkit-transition-delay: 0s;
           transition-delay: 0s;
-  background-image: url("https://pan.cyfan.ga/api/bing/bing.php");
+  background-image: url("https://pan.cyfan.top/api/bing/bing.php");
 }
 .el:nth-child(2) {
   -webkit-transform: translate3d(105.20833%, 0, 0);
@@ -364,7 +364,7 @@ body {
 .el:nth-child(2) .el__bg:before {
   -webkit-transition-delay: 0.1s;
           transition-delay: 0.1s;
-  background-image: url("https://pan.cyfan.ga/api/bing/2.php");
+  background-image: url("https://pan.cyfan.top/api/bing/2.php");
 }
 .el:nth-child(3) {
   -webkit-transform: translate3d(210.41667%, 0, 0);
@@ -392,7 +392,7 @@ body {
 .el:nth-child(3) .el__bg:before {
   -webkit-transition-delay: 0.2s;
           transition-delay: 0.2s;
-  background-image: url("https://pan.cyfan.ga/api/bing/3.php");
+  background-image: url("https://pan.cyfan.top/api/bing/3.php");
 }
 .el:nth-child(4) {
   -webkit-transform: translate3d(315.625%, 0, 0);
@@ -420,7 +420,7 @@ body {
 .el:nth-child(4) .el__bg:before {
   -webkit-transition-delay: 0.3s;
           transition-delay: 0.3s;
-  background-image: url("https://pan.cyfan.ga/api/bing/4.php");
+  background-image: url("https://pan.cyfan.top/api/bing/4.php");
 }
 .el:nth-child(5) {
   -webkit-transform: translate3d(420.83333%, 0, 0);
@@ -448,7 +448,7 @@ body {
 .el:nth-child(5) .el__bg:before {
   -webkit-transition-delay: 0.4s;
           transition-delay: 0.4s;
-  background-image: url("https://pan.cyfan.ga/api/bing/5.php");
+  background-image: url("https://pan.cyfan.top/api/bing/5.php");
 }
 .el:hover .el__bg:after {
   opacity: 0;
@@ -477,4 +477,3 @@ body {
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
 }
-
