--- a/bingpic/css/demo.css
+++ b/bingpic/css/demo.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Playfair+Display:900|Josefin+Sans:400);
+@import url(../css.css);
 @font-face {
 	font-weight: normal;
 	font-style: normal;
